--- a/about.html
+++ b/about.html
@@ -32,7 +32,124 @@
                     <div onClick="location.href='contactus.html'">
                         CONTACT US
                     </div>
-                    <div class="">RESOURCE CENTER</div>
+                    <div class="" onclick="location.href='resourcecenter.html'">
+                        RESOURCE CENTER
+                    </div>
+                </div>
+            </div>
+
+            <div class="banner1">
+                <img src="./temp2img.jpg" width="100%" height="100%" />
+            </div>
+
+            <div class="banner2">
+                <div class="banner2Lhs">
+                    <p style="font-size: 2rem; align-self: flex-start">
+                        Experience You Can Count On
+                    </p>
+                    <br />
+                    <p>
+                        If you have realized that employees are at the heart of
+                        a successful business, half the job is done.
+                    </p>
+                    <br />
+                    <p>
+                        Let us know areas in which you need support, be it
+                        honing skills for first-time managers, or sharpening
+                        leadership skills or coaching senior leadership team.
+                        Maybe you only know that you want...something. That's
+                        all we need to start with.
+                    </p>
+                    <br />
+                    <p>
+                        Our service includes Executive Coaching, Standard and
+                        bespoke Leadership Development Programs and Business
+                        Consulting services. We also offer a suite of quality
+                        products that will help you get there quickly and
+                        smoothly. That’s how we ensure your success.
+                    </p>
+                    <br />
+                </div>
+                <div class="banner2Rhs">
+                    <p
+                        style="
+                            margin-top: var(--margincommon);
+                            font-size: 1.6rem;
+                            font-weight: bold;
+                        "
+                    >
+                        Learn More
+                    </p>
+                    <br />
+                    <p>
+                        Our ramp-up process is designed to empower your team and
+                        outfit them with the tools they need to succeed.
+                    </p>
+                    <br />
+                    <p>
+                        Talk to us today about how we can support your growth,
+                        and put you on a solid track to success.
+                    </p>
+                    <br />
+                    <button
+                        style="
+                            width: 60%;
+                            height: 15%;
+                            /* margin-top: var(--margincommon); */
+                            background-color: var(--color1);
+                            font-size: 1.2rem;
+                        "
+                    >
+                        Know More
+                    </button>
+                </div>
+            </div>
+            <div
+                style="
+                    align-self: flex-start;
+                    font-size: 2rem;
+                    margin-top: var(--margincommon);
+                "
+            >
+                About Us
+            </div>
+            <div class="aboutusContainer">
+                <div class="hp">
+                    <div class="aboutusContainerImage">
+                        <!-- <img src="./temp2img.jpg" width="100%" height="100%"/> -->
+                    </div>
+                    <div class="aboutusContainerName">Haresh Patel</div>
+                    <div class="aboutusContainerContent"></div>
+                </div>
+                <div class="su">
+                    <div class="aboutusContainerImage"></div>
+                    <div class="aboutusContainerName">Haresh Patel</div>
+                    <div class="aboutusContainerContent"></div>
+                </div>
+                <div class="hk">
+                    <div class="aboutusContainerImage"></div>
+                    <div class="aboutusContainerName">Haresh Patel</div>
+                    <div class="aboutusContainerContent"></div>
+                </div>
+                <div class="gs">
+                    <div class="aboutusContainerImage"></div>
+                    <div class="aboutusContainerName">Haresh Patel</div>
+                    <div class="aboutusContainerContent"></div>
+                </div>
+                <div class="mt">
+                    <div class="aboutusContainerImage"></div>
+                    <div class="aboutusContainerName">Haresh Patel</div>
+                    <div class="aboutusContainerContent"></div>
+                </div>
+                <div class="cs">
+                    <div class="aboutusContainerImage"></div>
+                    <div class="aboutusContainerName">Haresh Patel</div>
+                    <div class="aboutusContainerContent"></div>
+                </div>
+                <div class="yd">
+                    <div class="aboutusContainerImage"></div>
+                    <div class="aboutusContainerName">Haresh Patel</div>
+                    <div class="aboutusContainerContent"></div>
                 </div>
             </div>
 
