--- a/contactus.html
+++ b/contactus.html
@@ -32,9 +32,47 @@
                         ABOUT
                     </div>
                     <div class="underlinePage">CONTACT US</div>
-                    <div class="">RESOURCE CENTER</div>
+                    <div class="" onclick="location.href='resourcecenter.html'">
+                        RESOURCE CENTER
+                    </div>
                 </div>
             </div>
+
+            <div class="contactusContainerTitle">Contact Us</div>
+            <div class="contactusContainer">
+                <div class="lhs">
+                    <div class="">Drop us a line</div>
+                    <input type="text" placeholder="Name" />
+                    <input type="text" placeholder="Email" />
+                    <input type="text" placeholder="Phone" />
+                    <input type="text" placeholder="Business Url" />
+                    <div class=""></div>
+                    <div class="">
+                        This site is protected by reCAPTCHA and the Google
+                        Privacy Policy and Terms of Service apply.
+                    </div>
+                </div>
+                <div class="rhs">
+                    <div class="">Get Started Today</div>
+                    <div class="">
+                        Interested in seeing what we can do for you? Call or
+                        email us to start the conversation.
+                    </div>
+                    <div class="">
+                        Gnosis Enrichment & Management #6 Cornwell Road,
+                        Langford Gardens Bangalore 560 025 INDIA E-mail:
+                        info@gnosisem.com
+                    </div>
+                    <div class="">Message us on whatsapp</div>
+                    <div class="">Gnosis Enrichment & Management</div>
+                    <div class="">
+                        Cornwell Road, Bheemanna Garden, Langford Gardens,
+                        Bengaluru, Karnataka, India
+                    </div>
+                </div>
+            </div>
+
+            <div class="map"></div>
 
             <div class="footer">
                 <div class="training">
