--- a/customers.html
+++ b/customers.html
@@ -32,7 +32,9 @@
                     <div class="" onClick="location.href='contactus.html'">
                         CONTACT US
                     </div>
-                    <div class="">RESOURCE CENTER</div>
+                    <div class="" onclick="location.href='resourcecenter.html'">
+                        RESOURCE CENTER
+                    </div>
                 </div>
             </div>
             <div class="customerContainerTitle">Customer</div>
@@ -53,6 +55,25 @@
                 <div class="bits"></div>
                 <div class="kadi"></div>
                 <div class="recmart"></div>
+            </div>
+            <div class="customerTestimonialTitle">Customer Testimonial</div>
+            <div class="customerTestimonial">
+                <div class="customerTestimonialsLhs">
+                    <iframe
+                        width="100%"
+                        height="100%"
+                        src="https://www.youtube.com/embed/3cbSgd4l74s"
+                        title="Excellence with Intrapreneurship - Customer Speak"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                    ></iframe>
+                </div>
+                <div class="customerTestimonialsRhs">
+                    Senior Director of Cisco shares his experience of how his
+                    leadership team benefited from GEM's Excellence with
+                    Intrapreneurship Program.
+                </div>
             </div>
 
             <div class="footer">
