--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                     <div class="" onClick="location.href='contactus.html'">
                         CONTACT US
                     </div>
-                    <div class="">RESOURCE CENTER</div>
+                    <div class="" onclick="location.href='resourcecenter.html'">
+                        RESOURCE CENTER
+                    </div>
                 </div>
             </div>
 
