--- a/resourcecenter.html
+++ b/resourcecenter.html
@@ -5,6 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./resourcecentercss.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+            integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+
         <title>Document</title>
     </head>
     <body>
@@ -30,46 +38,107 @@
                     <div class="underlinePage">RESOURCE CENTER</div>
                 </div>
             </div>
-        </div>
 
-        <div class="footer">
-            <div class="training">
-                <div class="lt">Leadership Training</div>
-                <div class="ec">Executive coaching</div>
-                <div class="pt">PMP Training</div>
-                <div class="bc">Business Consulting</div>
-                <div class="it">Industrial Training</div>
-                <div class="dt">Design Thinking</div>
-                <div class="m">Mudeeta</div>
+            <div class="vidSection">
+                <div class="vidtitle">VIDEO</div>
+                <div class="videodiv">
+                    <div class="vidscroller">
+                        <div class="video1"></div>
+                        <div class="video2"></div>
+                        <div class="video3"></div>
+                        <div class="video4"></div>
+                        <div class="video5"></div>
+                    </div>
+                </div>
             </div>
-            <div class="handles">
-                <a
-                    href="https://www.facebook.com/profile.php?id=100054384855864"
-                    ><i class="fa-brands fa-facebook" style="color: #4267b2"></i
-                ></a>
+            <div class="vidSection">
+                <div class="vidtitle">BLOG</div>
+                <div class="videodiv">
+                    <div class="vidscroller">
+                        <div class="video1"></div>
+                        <div class="video2"></div>
+                        <div class="video3"></div>
+                        <div class="video4"></div>
+                        <div class="video5"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="vidSection">
+                <div class="vidtitle">INFOGRAPHICS</div>
+                <div class="videodiv">
+                    <div class="vidscroller">
+                        <div class="video1"></div>
+                        <div class="video2"></div>
+                        <div class="video3"></div>
+                        <div class="video4"></div>
+                        <div class="video5"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="vidSection">
+                <div class="vidtitle">SELF-ASSESMENT</div>
+                <div class="videodiv">
+                    <div class="vidscroller">
+                        <div class="video1"></div>
+                        <div class="video2"></div>
+                        <div class="video3"></div>
+                        <div class="video4"></div>
+                        <div class="video5"></div>
+                    </div>
+                </div>
+            </div>
 
-                <a
-                    href="https://www.linkedin.com/company/gnosis-enrichment-&-management/"
-                    ><i class="fa-brands fa-linkedin" style="color: #0e76a8"></i
-                ></a>
-                <a href="https://twitter.com/haresh2"
-                    ><i class="fa-brands fa-twitter" style="color: #1da1f2"></i
-                ></a>
-                <a
-                    href="https://www.youtube.com/channel/UCrXeunQ3MyvYhBicfiEf4YQ"
-                    ><i class="fa-brands fa-youtube" style="color: #ff0000"></i
-                ></a>
-            </div>
-            <div class="companyName">GNOSIS ENRICHMENT & MANAGEMENT</div>
-            <div class="address">
-                <div>A002 AAKRUTHI SUNSHINE</div>
-                <div>KADUBESHANHALLI</div>
-                <div>BANGALORE, KA 560087</div>
-                <div>IN</div>
-            </div>
-            <div class="copyright">
-                COPYRIGHT © 2022 GNOSIS ENRICHMENT & MANAGEMENT - ALL RIGHTS
-                RESERVED.
+            <div class="footer">
+                <div class="training">
+                    <div class="lt">Leadership Training</div>
+                    <div class="ec">Executive coaching</div>
+                    <div class="pt">PMP Training</div>
+                    <div class="bc">Business Consulting</div>
+                    <div class="it">Industrial Training</div>
+                    <div class="dt">Design Thinking</div>
+                    <div class="m">Mudeeta</div>
+                </div>
+                <div class="handles">
+                    <a
+                        href="https://www.facebook.com/profile.php?id=100054384855864"
+                        ><i
+                            class="fa-brands fa-facebook"
+                            style="color: #4267b2"
+                        ></i
+                    ></a>
+
+                    <a
+                        href="https://www.linkedin.com/company/gnosis-enrichment-&-management/"
+                        ><i
+                            class="fa-brands fa-linkedin"
+                            style="color: #0e76a8"
+                        ></i
+                    ></a>
+                    <a href="https://twitter.com/haresh2"
+                        ><i
+                            class="fa-brands fa-twitter"
+                            style="color: #1da1f2"
+                        ></i
+                    ></a>
+                    <a
+                        href="https://www.youtube.com/channel/UCrXeunQ3MyvYhBicfiEf4YQ"
+                        ><i
+                            class="fa-brands fa-youtube"
+                            style="color: #ff0000"
+                        ></i
+                    ></a>
+                </div>
+                <div class="companyName">GNOSIS ENRICHMENT & MANAGEMENT</div>
+                <div class="address">
+                    <div>A002 AAKRUTHI SUNSHINE</div>
+                    <div>KADUBESHANHALLI</div>
+                    <div>BANGALORE, KA 560087</div>
+                    <div>IN</div>
+                </div>
+                <div class="copyright">
+                    COPYRIGHT © 2022 GNOSIS ENRICHMENT & MANAGEMENT - ALL RIGHTS
+                    RESERVED.
+                </div>
             </div>
         </div>
     </body>
