added resource center video section youtube videos and context

--- a/resourcecenter.html
+++ b/resourcecenter.html
@@ -43,15 +43,97 @@
                 <div class="vidtitle">VIDEO</div>
                 <div class="videodiv">
                     <div class="vidscroller">
-                        <div class="video1"></div>
-                        <div class="video2"></div>
-                        <div class="video3"></div>
-                        <div class="video4"></div>
-                        <div class="video5"></div>
+                        <div class="video1">
+                            <div class="vidlhs">
+                                <iframe
+                                    width="100%"
+                                    height="75%"
+                                    src="https://www.youtube.com/embed/iYKpgYim7-Y"
+                                    title="#GHCI15:Mastering Organizational Dynamics"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen
+                                ></iframe>
+                            </div>
+                            <div class="vidrhs">
+                                Watch GHC session where Haresh Patel was invited
+                                as a speaker, sharing his views on Mastering
+                                Organizational Dynamics
+                            </div>
+                        </div>
+                        <div class="video2">
+                            <div class="vidlhs">
+                                <iframe
+                                    width="100%"
+                                    height="75%"
+                                    src="https://www.youtube.com/embed/-toouqTFHTw"
+                                    title="Workplace revival on mind?"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen
+                                ></iframe>
+                            </div>
+                            <div class="vidrhs">
+                                Workplace revival on mind? Check for this 8
+                                symptoms.
+                            </div>
+                        </div>
+                        <div class="video3">
+                            <div class="vidlhs">
+                                <iframe
+                                    width="592"
+                                    height="334"
+                                    src="https://www.youtube.com/embed/K9UttkG6Ahg"
+                                    title="Employee to Entrepreneur"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen
+                                ></iframe>
+                            </div>
+                            <div class="vidrhs">
+                                12 Intrapreneurship Questions and Answer, by
+                                Haresh Patel at PMI Chapter, Bangalore
+                            </div>
+                        </div>
+                        <div class="video4">
+                            <div class="vidlhs">
+                                <iframe
+                                    width="592"
+                                    height="334"
+                                    src="https://www.youtube.com/embed/RoopjmoGPxk"
+                                    title="Pursuit of Happiness"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen
+                                ></iframe>
+                            </div>
+                            <div class="vidrhs">
+                                In pursuit for the happiness, do we miss being
+                                alive?
+                            </div>
+                        </div>
+                        <div class="video5">
+                            <div class="vidlhs">
+                                <iframe
+                                    width="592"
+                                    height="334"
+                                    src="https://www.youtube.com/embed/2pgPnreXqwQ"
+                                    title="Economics for Kids: Effect of demonetizing 500 and 1000 Rs notes"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen
+                                ></iframe>
+                            </div>
+                            <div class="vidrhs">
+                                Haresh loves teaching non-conventional subjects
+                                to children. Here's small class on famous
+                                Demonetization.
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="vidSection">
+            <div class="blogSection">
                 <div class="vidtitle">BLOG</div>
                 <div class="videodiv">
                     <div class="vidscroller">
@@ -63,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <div class="vidSection">
+            <div class="infoSection">
                 <div class="vidtitle">INFOGRAPHICS</div>
                 <div class="videodiv">
                     <div class="vidscroller">
@@ -75,7 +157,7 @@
                     </div>
                 </div>
             </div>
-            <div class="vidSection">
+            <div class="selfSection">
                 <div class="vidtitle">SELF-ASSESMENT</div>
                 <div class="videodiv">
                     <div class="vidscroller">
